ajax added in history.php

--- a/protected/extensions/bootstrap/assets/css/yiistrap.css
+++ b/protected/extensions/bootstrap/assets/css/yiistrap.css
@@ -37,6 +37,7 @@
 }
 .grid-view .table th > .sort-link:hover {
   text-decoration: none;
+  background-color:red !important;
 }
 .grid-view .table th > .sort-link .caret {
   border-color: transparent;
